made copy of software design doc

--- a/Documents/SoftwareContract/SoftwareContract.tex
+++ b/Documents/SoftwareContract/SoftwareContract.tex
@@ -80,7 +80,7 @@ No Compensation
 
 \section{INTELLECTUAL PROPERTY RIGHTS } 
 
-All deliverables become property of South Dakota School of Mines and Technology.
+All deliverables become property of South Dakota School of Mines and Technology ?.
 
 \section{WARRANTIES }  
 
