revised Software Contract

--- a/Documents/SoftwareContract/SoftwareContract.tex
+++ b/Documents/SoftwareContract/SoftwareContract.tex
@@ -3,6 +3,7 @@
 \usepackage{ulem}
 \usepackage[dvipsnames,svgnames]{xcolor}
 \usepackage[pdftex]{graphicx}
+\usepackage{pdfpages}
 \title{SDSMT SENIOR DESIGN SOFTWARE DEVELOPMENT AGREEMENT}
 \usepackage{hyperref}
 \setlength{\parskip}{2mm}
@@ -20,7 +21,7 @@
 
 This Software Development Agreement (the ``Agreement") is made between the SDSMT  Computer Science Senior Design Team ``Crowd Science Mapper'',
 consisting of team members Hannah Aker and Jiasong Yan, 
- and  Sponsors  Dr.Mengyu Qiao and Gail Schmidt (SGT), 
+ and  Sponsors  Dr.Mengyu Qiao and Gail Schmidt, 
  with address: 501 E. Saint Joeseph Street, Rapid City, SD, 57701. 
 
 \section{RECITALS}
@@ -80,7 +81,7 @@ No Compensation
 
 \section{INTELLECTUAL PROPERTY RIGHTS } 
 
-All deliverables become property of South Dakota School of Mines and Technology ?.
+All deliverables become property of South Dakota School of Mines and Technology.
 
 \section{WARRANTIES }  
 
@@ -135,13 +136,15 @@ Attachment ``Crowd Science Mapper Project Description'' is incorporated in this 
   Hannah Aker & Date \\
   \strut\vspace{0.25in} & \\
   \makebox[3in]{\hrulefill} & \makebox[2in]{\hrulefill} \\
-  Jiason Yan & Date \\
+  Jiasong Yan & Date \\
   \strut\vspace{0.25in} & \\
   \makebox[3in]{\hrulefill} & \makebox[2in]{\hrulefill} \\
   Dr. Megyu Qiao & Date \\
     \strut\vspace{0.25in} & \\
   \makebox[3in]{\hrulefill} & \makebox[2in]{\hrulefill} \\
   Gail Schmidt & Date \\
+  
+ 
 \end{tabular}
-
+ \includepdf[pages={1-1}]{CrowdScienceMapperProjectDescription.pdf}
 \end{document}
