--- a/Documents/DesignDocument/requirements.tex
+++ b/Documents/DesignDocument/requirements.tex
@@ -2,144 +2,70 @@
 \chapter{User Stories, Backlog and Requirements}
 \section{Overview}
 
-
-The overview should take the form of an executive summary.  Give the reader a feel 
-for the purpose of the document, what is contained in the document, and an idea 
-of the purpose for the system or product. 
-
- The userstories 
-are provided by the stakeholders.  You will create he backlogs and the requirements, and document here.  
-This chapter should contain 
-details about each of the requirements and how the requirements are or will be 
-satisfied in the design and implementation of the system.
-
-Below:   list, describe, and define the requirements in this chapter.  
-There could be any number of sub-sections to help provide the necessary level of 
-detail. 
-
-
-
-
+This document contains project details for the Crowd Science Mapper project. The Crowd Science Mapper will be a generic crowdsourcing system framework and toolkits, which can be customized by ordinary users with no programming experience using graphical user interface
 
 \subsection{Scope}
 
-
-What scope does this document cover?  This document would contain stakeholder information, 
-initial user stories, requirements, proof of concept results, and various research 
-task results. 
-
-
+This section contain stakeholder information, initial user stories, requirements, and proof of concept results
 
 \subsection{Purpose of the System}
-What is the purpose of the system or product? 
-
+The purpose of this system is to provide a generic crowdsourcing toolkit. That is, to allow ordinary to report and view events, and allow administrators to approve and modify event sets.
 
 \section{ Stakeholder Information}
 
-
-This section would provide the basic description of all of the stakeholders for 
-the project.  Who has an interest in the successful and/or unsuccessful completion 
-of this project? 
-
+Stakeholders for this project are academics and researchers who would eventually be the users of this project.
 
 \subsection{Customer or End User (Product Owner)}
-Who?  What role will they play in the project?  Will this person or group manage 
-and prioritize the product backlog?  Who will they interact with on the team to 
-drive product backlog priorities if not done directly? 
 
-\subsection{Management or Instructor (Scrum Master)}
-Who?  What role will they play in the project?  Will the Scrum Master drive the 
-Sprint Meetings? 
-
-
-\subsection{Investors}
-Are there any?  Who?  What role will they play? 
-
+Product owners are Dr. Mengyu Qiao and Gail Schmidt, who will assist in the project in mentor roles. As needed, they will assist with prioritizing the product backlog, and identify important features.
 
 \subsection{Developers --Testers}
-Who?  Is there a defined project manager, developer, tester, designer, architect, 
-etc.? 
-
-
-\section{Business Need}
-Use this section to define what business need exist and how this software will 
-meet and/or exceed that business need.   
+Developers and testers are Jiasong Yan and Hannah Aker.
 
 \section{Requirements and Design Constraints}
-Use this section to discuss what requirements exist that deal with meeting the 
-business need.  These requirements might equate to design constraints which can 
-take the form of system, network, and/or user constraints.  Examples:  Windows 
-Server only, iOS only, slow network constraints, or no offline, local storage capabilities. 
 
+This project will be a HTML based webpage using Java Script to connect to a Mongo database, and hosted on an Apache server
 
 \subsection{System  Requirements}
-What are they?  How will they impact the potential design?  Are there alternatives? 
+Webpage should be able to run on all operating systems. This project is not required to have mobile functionality.
 
 
 \subsection{Network Requirements}
-What are they? 
-
+This project will be server based, hosted on an Apache 2.0 server, access supplied to us by Gail Schmidt. 
 
 \subsection{Development Environment Requirements}
-What are they?  Is the system supposed to be cross-platform? 
-
+Development will be done in HTML, PhP and Java Script. The project will connect to a Mongo database.
 
 \subsection{Project  Management Methodology}
-The stakeholders might restrict how the project implementation will be managed. 
- There may be constraints on when design meetings will take place.  There might 
-be restrictions on how often progress reports need to be provided and to whom. 
- 
 \begin{itemize}
-\item What system will be used to keep track of the backlogs and sprint status?
-\item Will all parties have access to the Sprint and Product Backlogs?
-\item How many Sprints will encompass this particular project?
-\item How long are the Sprint Cycles?
-\item Are there restrictions on source control? 
+\item Github issues will be used to keep track of backlog and sprint status.
+\item All parties have access to the Sprint and Product Backlogs.
+\item There will be 6 sprints total in this project.
+\item Sprint cycles will last 3 weeks.
+\item Source control will be Github.
 \end{itemize}
 
 \section{User Stories}
-This section can really be seen as the guts of the document.  This section should 
-be the result of discussions with the stakeholders with regard to the actual functional 
-requirements of the software.  It is the user stories that will be used in the 
-work breakdown structure to build tasks to fill the product backlog for implementation 
-through the sprints.
-
-This section should contain sub-sections to define and potentially provide a breakdown 
-of larger user stories into smaller user stories. 
-
-
 
 \subsection{User Story \#1}
-User story \#1 discussed. 
-
-\subsubsection{User Story \#1 Breakdown}
-Does the first user story need some division into smaller, consumable parts by 
-the reader?  This does not need to go to the level of actual task definition and 
-may not be required. 
+As a user, I want all the core functionality of the landscape change mapper to be maintained. These functions include, but are not limited to:
+\begin{itemize}
+\item Visual map representation of events
+\item Detailed event list
+\item Event reporting interface
+\item New user registration
+\item User login
+\end{itemize}
 
 \subsection{User Story \#2} 
-
-\subsubsection{User Story \#2 Breakdown}
-User story \#2  .... 
+As an administrator, I want to be able to customize a set of events to fit my needs. This may include user input and display items, database design, digital map, webpage color and style, logo, etc. 
 
 \subsection{User Story \#3} 
+As an administrator, I want to be able to edit existing event reports.
 
-\subsubsection{User Story \#3 Breakdown}
-User story \#3  .... 
-
-
-\section{Research or Proof of Concept Results}
-This section is reserved for the discussion centered on any research that needed 
-to take place before full system design.  The research efforts may have led to 
-the need to actually provide a proof of concept for approval by the stakeholders. 
- The proof of concept might even go to the extent of a user interface design or 
-mockups. 
-
+\subsection{User Story \#4} 
+As a user, I want to be able to select which set of events I would like to view.
 
 \section{Supporting Material}
-
-
-This document might contain references or supporting material which should be documented 
-and discussed  either here if appropriate or more often in the appendices at the end.  This material may have been provided by the stakeholders  
-or it may be material garnered from research tasks.
+Project Description Document
 
