first draft of sprint report #4

--- a/Documents/SprintReports/sprints_wrapper.tex
+++ b/Documents/SprintReports/sprints_wrapper.tex
@@ -43,7 +43,7 @@ morecomment=[s][\color{red}]{Out[}{]\:},
 
 {\fontsize{16}{16}\selectfont Sprint Report \#1}
 
-Sprint Report here  (cut and paste or include)
+\input{sprint1.tex}
 
 
 \end{document}
