#17 #3 #2 added to requirements, added mission/elevator and project

--- a/Documents/DesignDocument/InputDocs/overview.tex
+++ b/Documents/DesignDocument/InputDocs/overview.tex
@@ -44,7 +44,7 @@ update correctly.
 
 \begin{figure}[tbh]
 \begin{center}
-\includegraphics[width=0.75\textwidth]{./diagram}
+\includegraphics[width=0.75\textwidth]{diagram.png}
 \end{center}
 \caption{A sample figure .... System Diagram \label{systemdiagram}}
 \end{figure}
