--- a/Documents/DesignDocument/SystemTemplate.tex
+++ b/Documents/DesignDocument/SystemTemplate.tex
@@ -6,11 +6,11 @@
 \input{seniordesignstyle.tex} % This sets the format.
 
 % Add your title page contents here 
-\title{{\color{MSBlue1} \rule{\linewidth}{0.5mm}}\\[2mm] {\huge \bfseries \color{MSBlue1} Product/Report Title Here }\\[-1mm] {\color{MSBlue1}\rule{\linewidth}{0.5mm}} \\  \vfill
-{\LARGE \bfseries \color{MSBlue2} Senior Design Final Documentation }\\  \vfill 
-{\color{MSBlue1} Team Name} }
-\author{\color{MSBlue1}  FullName1 \and \color{MSBlue1} FullName2 \and  \color{MSBlue1} FullName3 }
-\date{\color{MSBlue1} \today}
+\title{{\color{MSBlue1} \rule{\linewidth}{0.5mm}}\\[2mm] {\huge \bfseries  Crowd Science  }\\[-1mm] {\rule{\linewidth}{0.5mm}} \\  \vfill
+{\LARGE \bfseries  Senior Design Final Documentation }\\  \vfill 
+{ Crowd Science Mapper} }
+\author{  Hannah Aker \and  \color{MSBlue1} Jiasong Yan }
+\date{ \today}
 
 
 \begin{document}
@@ -29,27 +29,27 @@
 \addcontentsline{toc}{chapter}{List of Algorithms}
 
 \chapter{Overview Statements}
-\input{mission.tex}  % add mission statement to mission.tex
+\input{InputDocs/mission.tex}  % add mission statement to mission.tex
 
 \chapter{Document Preparation and Updates}
-\input{preparation.tex}
+\input{InputDocs/preparation.tex}
  
 \mainmatter
 
 %%  Add to the following chapters
 
-\input{overview.tex}  %% All tracks
-\input{project.tex}   %% All tracks
-\input{requirements.tex}  %% Not research track
-\input{design.tex}  %% All tracks
-\input{testing.tex}  %% All tracks
-\input{develop.tex} %% All tracks
-\input{deploy.tex}  %% Normally not research track
-\input{userdocs.tex} %% All tracks
-\input{refman.tex}  %% All tracks
-\input{businessplan.tex}   %% Entrepreneur track only 
-\input{log.tex}   %% Research track  only
-\input{results.tex}  %% Research track  only
+\input{InputDocs/overview.tex}  %% All tracks
+\input{InputDocs/project.tex}   %% All tracks
+\input{InputDocs/requirements.tex}  %% Not research track
+\input{InputDocs/design.tex}  %% All tracks
+\input{InputDocs/testing.tex}  %% All tracks
+\input{InputDocs/develop.tex} %% All tracks
+%%\input{deploy.tex}  %% Normally not research track
+\input{InputDocs/userdocs.tex} %% All tracks
+\input{InputDocs/refman.tex}  %% All tracks
+%%\input{businessplan.tex}   %% Entrepreneur track only 
+%%\input{log.tex}   %% Research track  only
+%%\input{results.tex}  %% Research track  only
 
 \bibliographystyle{plain}
 \bibliography{designrefs.bib}
@@ -64,29 +64,29 @@
 \agreement
 
 \chapter{Software Agreement}
-\includepdf[pages={1-5}]{SoftwareContract.pdf}
+\includepdf[pages={1-5}]{InputDocs/SoftwareContract.pdf}
 
 % In our style file, appendices are numbered with capital letters
 \appendix
 
 \chapter{Product Description}
-\input{productdescription.tex}
+\input{InputDocs/productdescription.tex}
 
-\chapter{Publications}   %% Research track 
-\input{pubs.tex}
+%%\chapter{Publications}   %% Research track 
+%%\input{pubs.tex}
 
 \chapter{Sprint Reports}
-\input{sprints.tex}
+\input{InputDocs/sprints.tex}
 
 \chapter{Industrial Experience and Resumes}
-\input{industrial.tex}
+\input{InputDocs/industrial.tex}
 
 \chapter{Acknowledgment}
 \label{SpecialThanks}  
 Thanks  
 
 \chapter{Supporting Materials}
-\input{supporting.tex}
+\input{InputDocs/supporting.tex}
 
 % chapters in backmatter don't have numbers, but they appear in the
 % table of contents, and are numbered BM-X where X is the page number
@@ -98,8 +98,8 @@ Thanks
 %\includepdf[pages={1-17}]{syllabus.pdf}
 
 %%% Remove after reading
-\chapter{\LaTeX\ Example}
-\input{latexexample.tex}
+%%\chapter{\LaTeX\ Example}
+%%\input{latexexample.tex}
 
 
 
