#3 Finished requirements section

--- a/Documents/DesignDocument/InputDocs/design.tex
+++ b/Documents/DesignDocument/InputDocs/design.tex
@@ -1,4 +1,4 @@
-% !TEX root = SystemTemplate.tex
+% !TEX root = ./SystemTemplate.tex
 
 \chapter{Design  and Implementation}
 This section is used to describe the design details for each of the major components 
