--- a/Documents/DesignDocument/InputDocs/requirements.tex
+++ b/Documents/DesignDocument/InputDocs/requirements.tex
@@ -62,11 +62,14 @@ As a user, I want to be able to select which set of events I would like to view.
 
 \section{Requirements}
 The requirements are directly derived from the user stories, but much more refined. These requirements will map directly to test cases in a tracibility matrix.
+
 \subsection{Global}
 \begin{itemize}
 \item Each page shall contain a navigation bar at the top of the page.
 \item The navigation bar will have buttons for logging in, new user registration, administration, and event reporting.
+\item Each page shall contain a drop down box for selecting the event set.
 \end{itemize}
+
 \subsection{New User Registration}
 \begin{itemize}
 \item When no user is logged in, there will be a button on the main page leading to a new user registration page.
@@ -74,6 +77,7 @@ The requirements are directly derived from the user stories, but much more refin
 \item If the passwords do not match, the user will be notified, and need to reenter one or both passwords.
 \item After registering, a user will automatically be logged in.
 \end{itemize}
+
 \subsection{User Login}
 \begin{itemize}
 \item When no user is logged in, there will be a button on the main page leading to a login page
@@ -81,11 +85,68 @@ The requirements are directly derived from the user stories, but much more refin
 \item The user will be notified if the username or password was incorrect, and may need to reenter one or both feilds.
 \item When the user is logged in, an icon indicating the logged in user and a log out button will replace the login button on the navigation page.
 \end{itemize}
+
 \subsection{Event reporting interface}
+\begin{itemize}
+\item When a user is logged in, the user is listed as the author of the report.
+\item When no user is logged in, the author of the report is ``Annonymous''.
+\item Every event report shall include a longitude and latitude feild.
+\item The event reporting window shall contain the feilds specified for that event data set.
+\item Each required feild will be marked as required.
+\item The event reporting window shall contain a submit button.
+\item The user will be notified if they have not entered all required feilds, and will be able to return to edit their unfinished report.
+\end{itemize}
+
 \subsection{Detailed event list}
+\begin{itemize}
+\item The detailed event list will be a table of the current event set, and will include all feilds specified for that event data set.
+\item Each entry shall include longitude, latitude of event, and the author of the event.
+\item When a point on the map is hovered over, the associated entry in the list will be highlighted.
+\item When a point on the map is clicked, the associated entry in the list will be highlighted in a different shade.
+\end{itemize}
+
 \subsection{Map representation of events}
+\begin{itemize}
+\item The map shall be a visual representation of the event data set. 
+\item The map shall contain a marker for each event report, placed at the longitude and latitude specified in the report.
+\item The map will be able to be zoomed in, zoomed out, and panned.
+\item Entries in the event list will be highlighted when a marker is hovered over or clicked.
+\end{itemize}
+
 \subsection{Administrator Login}
+\begin{itemize}
+\item When an administrator logs in, they wil lbe able to see buttons in the navigation bar that lead to pages for editing events and customizing event sets.
+\end{itemize}
+
 \subsection{Administrator editing of existing events}
+\begin{itemize}
+\item The detailed data list shall be displayed in a seperate window.
+\item Each event report in the list will have an ``edit'' button.
+\item When an administrator clicks the ``edit'' button, they will be taken to the event reporting interface, with the added feild ``Reason for editing''.
+\item When an administrator edits an event report, the administrator name, reason for editing, and date and time shall be recorded and added to the event's history.
+\item An administrator may mark an event report as false, the administrator name, reason for declaring false, and date and time shall be added to the event's history.
+\end{itemize}
+
 \subsection{Administrator customization of event sets}
+\begin{itemize}
+\item The administrator will be able to create a new event data set.
+\item The administrator will be able to edit the details of an existing event data set.
+\item When the administrator clicks on the new event data set, a blank event data set will be created. 
+\item The display name and identification name of an event data set cannot be empty or null.
+\item The identification name will be used to reference the database, and cannot be changed after creation.
+\item The administrator will be able to add feilds to their event data set by clicking an ``Add new Feild'' button.
+\item The administrator will be able to designate the feild identification name, display name, data type, display method if appliciable, and acceptable values if appliciable. 
+\item If the administrator wants to change the data type of the feild, they will need to remove the current feild and recreate it with the new data type, and data stored in the previous type will be lost.
+\item The administrator will be able to edit display name, display method, and acceptable values with ease.
+\item The data types that can be selected will be number, short text, long text, radio button group, check box group, and picture upload.
+\item When the administrator is finished editing or creating their event data set, they will be able to click ``save'' to save their data. 
+\item If there are problems with what the administrator has entered, the administrator will be notified and prompted to fix the errors.
+\end{itemize}
+
 \subsection{User selection of data to view}
+\begin{itemize}
+\item User will beable to select from a drop down menu on any page which event data set to view. 
+\item When the current event data set is changed, the map, event list, administrator functions and report features will change according to the feilds specified for that set.
+\item If implemented, the general appearance of the pages will change according to the selected event data set.
+\end{itemize}
 
