--- a/Documents/DesignDocument/InputDocs/preparation.tex
+++ b/Documents/DesignDocument/InputDocs/preparation.tex
@@ -25,6 +25,8 @@ Current Version [1.2.0]
  \hline
   \textit{\textbf{10/30/15}} & \textit{Hannah Aker} & \textit{1.2.0} & \textit{Add sprint reports, refine system template, refine requirements, filled in project and mission/elevator section}\tabularnewline
 \hline
+ \textit{\textbf{11/14/15}} & \textit{Hannah Aker} & \textit{1.2.0} & \textit{Finished requirements.}\tabularnewline
+\hline
  &  &  & \tabularnewline
 \hline
  &  &  & \tabularnewline
