--- a/Documents/DesignDocument/InputDocs/requirements.tex
+++ b/Documents/DesignDocument/InputDocs/requirements.tex
@@ -20,7 +20,7 @@ Stakeholders for this project are academics and researchers who would eventually
 Product owners are Dr. Mengyu Qiao and Gail Schmidt, who will assist in the project in mentor roles. As needed, they will assist with prioritizing the product backlog, and identify important features. Intellicetual property in this project belongs to South Dakota School of Mines and Technology. 
 
 \subsection{Developers --Testers}
-Developers and testers are Jiasong Yan and Hannah Aker. Testers will eventually include SDSMT faculty and students, with faculty as administrators and students as ordinary users reporting events.
+Developers and testers are Jiasong Yan and Hannah Aker. Testers may eventually include SDSMT faculty and students, with faculty as administrators and students as ordinary users reporting events.
 
 \section{Requirements and Design Constraints}
 
@@ -33,7 +33,7 @@ Webpage should be able to run on all operating systems and all internet browsers
 This project will be server based, hosted on an Apache 2.0 server, access supplied to us by Gail Schmidt. The server is a cloud based server operated by SGT. Information about Apache 2.0 servers can be found here: \url{http://httpd.apache.org/docs/2.0/}.
 
 \subsection{Development Environment Requirements}
-Development will be done in HTML, CSS, PHP and Java Script. The project will connect to a Mongo database. Information about HTML, CSS, PHP and Javascript can be found here: \url{http://html.net/}.
+Development will be done in HTML, CSS, PHP and Java Script. The project will connect to a Mongo database.\url{https://www.mongodb.org/}. Information about HTML, CSS, PHP and Javascript can be found here: \url{http://html.net/}.
 
 \subsection{Project  Management Methodology}
 Source control will be Github; github issues will be used to keep track of backlog and sprint status. The github repository is located at: \url{https://github.com/SDSMT-CSC464-F15/crowdscience} All parties have access to the Sprint and Product Backlogs. There will be 6 sprints total in this project, each lasting 3 weeks.
