#20 Added resume, updated preparation

--- a/Documents/DesignDocument/InputDocs/industrial.tex
+++ b/Documents/DesignDocument/InputDocs/industrial.tex
@@ -1,9 +1,9 @@
-% !TEX root = SystemTemplate.tex
+% !TEX root = ../SystemTemplate.tex
 
 
 \section{Resumes}
 
-Your resumes are included here.  See the source file (industrial.tex) and uncomment the PDF includes to see how this works.  If your resume is written in \LaTeX\ then you can just insert the \LaTeX\ source code.
+\includepdf[pages={1}]{./InputDocs/AkerResume9-8-2015.pdf}
 
 %    \includepdf[pages={1}]{report.pdf}  %% example of limited page include
 
