--- a/Documents/DesignDocument/InputDocs/preparation.tex
+++ b/Documents/DesignDocument/InputDocs/preparation.tex
@@ -25,7 +25,9 @@ Current Version [1.2.0]
  \hline
   \textit{\textbf{10/30/15}} & \textit{Hannah Aker} & \textit{1.2.0} & \textit{Add sprint reports, refine system template, refine requirements, filled in project and mission/elevator section}\tabularnewline
 \hline
- \textit{\textbf{11/14/15}} & \textit{Hannah Aker} & \textit{1.2.0} & \textit{Finished requirements.}\tabularnewline
+ \textit{\textbf{11/14/15}} & \textit{Hannah Aker} & \textit{1.3.0} & \textit{Finished requirements.}\tabularnewline
+\hline
+ \textit{\textbf{11/15/15}} & \textit{Hannah Aker} & \textit{1.4.0} & \textit{Finished overview and added resume.}\tabularnewline
 \hline
  &  &  & \tabularnewline
 \hline
