#18 First draft of Design section, forgot to commit earlier

--- a/Documents/DesignDocument/InputDocs/project.tex
+++ b/Documents/DesignDocument/InputDocs/project.tex
@@ -16,11 +16,13 @@ The project will be managed using an Agile approach.  There will be 6 sprints to
 \section{Phase  Overview}
 This project will be implemented in two phases. The first phase will entail analyzing the Landscape Change Mapper project and adapting a copy of the project for expansion into a generic Crowd Science Mapper. The  second phase will entail adding the necessary freatures to the base project from phase one to create a proof of concept website.
 
-Within phase one, we will implement and then test the adapted Landscape Change Mapper features we add to the project. Delivery is incorporated into the texting phase, because all testing will be done on the live server. Phase two will also include a design phase where we fully design the new features to be added.
+Within phase one, we will implement and then test the adapted Landscape Change Mapper features we add to the project. Delivery is incorporated into the testing phase, because all testing will be done on the live server. Phase two will consist of all the steps in phase one, but will also include a design phase where we fully design the new features to be added.
 
 \section{Terminology and Acronyms}
-SGT: Stinger Ghaffarian Technologies
-LCM: Landscape Change Mapper
-HTML: Hyper-Text Markup Language
-CSS: Cascading Style Sheet
-PHP: Hypertext Preprocessor
+\begin{itemize}
+\item SGT: Stinger Ghaffarian Technologies
+\item LCM: Landscape Change Mapper
+\item HTML: Hyper-Text Markup Language
+\item CSS: Cascading Style Sheet
+\item PHP: Hypertext Preprocessor
+\end{itemize}
