--- a/Documents/DesignDocument/InputDocs/overview.tex
+++ b/Documents/DesignDocument/InputDocs/overview.tex
@@ -5,22 +5,17 @@
 \section{Scope}
 This section covers an overview of the Crowd Science Mapper. This section will contain information about the prupose, goals, major system components, and technology used.
 
-
-\section{Purpose}
-The purpose of of this system is to provide a generic crowdsourcing website, where ordinary citizens can report events such as butterfly or bird sightings; where researchers can view event reports; and administrators can edit event report data sets and make changes to event data.
-
+\section{Purpose and System Goals}
+The purpose of of this system is to provide a generic crowdsourcing website, where ordinary citizens can report events such as butterfly or bird sightings; where researchers can view event reports; and administrators can edit event report data sets and make changes to event data.  The goal of this system is to fulfill this purpose.
 
 \subsection{Event Reporting}
-Ordinary citizens will be able to report events that can then be viewed by researchers and academics. 
+Ordinary citizens will be able to log in and report events that can then be viewed by researchers, academics and other ordinary citizens. 
 
 \subsection{Event Set Editing}
-Administrators can edit existing events sets to refine what users report, and create new event sets to allow users to start reporting events. 
+Administrators can edit existing events sets to refine what users report, and create new event sets to allow users to start reporting events.  Administrators will be able to moderate the events that users report.
 
 \subsection{Event Viewing}
-Researchers will be able to view events in a map representation. This project may be extended to include database queries about the event sets.
-
-\section{Systems Goals}
-The goal of this system is to fulfill the purpose of this system, and create a generic crowdsourcing webstie.
+Researchers will be able to view events in a map representation, with greater event detail provided below the map. This project may be extended to include database queries about the event sets.
 
 \section{System Overview and Diagram}
 The webpage will consist of the major components. The main page will contain a map and detailed list of events for the selected event set. There will be a button on the main page that will take the user to a reporting interface. The user can login, and if the user is an administrator, the main page will contain buttons leading to the pages for editing and creating event sets and editing individual events. See Figure~\ref{mainpage}..
@@ -33,8 +28,7 @@ The webpage will consist of the major components. The main page will contain a m
 \end{figure}
 
 \section{Technologies Overview}
-This section contains a list of specific technologies used to
-develop the system.  See Table~\ref{technologies}.  
+This section contains a list of specific technologies used to develop the system.  See Table~\ref{technologies}.  
 
 \begin{table}[tbh]
 \caption{Technologies Used \label{technologies}}
