Added Sprint 5 Prototype section

--- a/Documents/NewDesignDoc/prototypes.tex
+++ b/Documents/NewDesignDoc/prototypes.tex
@@ -3,7 +3,7 @@
 
 \chapter{Prototypes}
 
-This chapter is for recording each prototype developed.  It is a historical record of what you accomplished in 464/465.   This should be organized according to Sprints.  It should have the basic description of the sprint deliverable and what was accomplished.  Screen shots, photos, captures from video, etc should be used.  
+This chapter records eaach prototype developed.  This section is a historical record of what was accomplished in the course of the project, organized according to Sprints.  This section contains the basic description of the sprint deliverable and what was accomplished.  
 
 \section{Sprint 1 Prototype}
 \subsection{Deliverable}
@@ -62,7 +62,7 @@ This sprint was a roaring failure, overall. Following the client presentation on
 
 \section{Sprint 4 Prototype}
 \subsection{Deliverable}
-Added event set selection to main page, added feilds to register page. See Figure~\ref{prototype_S4_main}, Figure~\ref{prototype_S4_selectbox}, Figure~\ref{prototype_S4_login} , and Figure~\ref{prototype_S4_register}.
+Added event set selection to main page, added feilds to register page. See Figure~\ref{prototype_S4_main}, Figure~\ref{prototype_S4_selectbox}, and Figure~\ref{prototype_S4_register}.
 
 \begin{figure}[tbh]
 \begin{center}
@@ -99,6 +99,66 @@ This sprint was a roaring success, overall. Early in the sprint, Jiasong Yan was
 
 \section{Sprint 5 Prototype}
 \subsection{Deliverable}
+Added map of events, event photos carousel, and event reports table to main page, shown here with data from the Landscape Change event set. See Figure~\ref{prototype_S5_main}, Figure~\ref{prototype_S5_table},  Figure~\ref{prototype_S5_map}, and  Figure~\ref{prototype_S5_imagecarousel}.  Added reporting interface, closeup images shown with fields corresponding to the Landscape Change event set, and an overall image shown with fields corresponding to the Bird Sighting event set. See Figure~\ref{prototype_S5_report_1}, Figure~\ref{prototype_S5_report_2}, and Figure~\ref{prototype_S5_report}. Added interface to view single event. See Figure~\ref{prototype_S5_view}.
+
+\begin{figure}[tbh]
+\begin{center}
+\includegraphics[width=0.75\textwidth]{./figures/prototype_S5_main.png}
+\end{center}
+\caption{Crowd Science Main Page Prototype as of Sprint 5\label{prototype_S5_main}}
+\end{figure}
+
+\begin{figure}[tbh]
+\begin{center}
+\includegraphics[width=0.75\textwidth]{./figures/prototype_S5_table.png}
+\end{center}
+\caption{Crowd Science Event Reports Table Prototype as of Sprint 5\label{prototype_S5_table}}
+\end{figure}
+
+\begin{figure}[tbh]
+\begin{center}
+\includegraphics[width=0.75\textwidth]{./figures/prototype_S5_map.png}
+\end{center}
+\caption{Crowd Science Event Reports Map Prototype as of Sprint 5\label{prototype_S5_map}}
+\end{figure}
+
+\begin{figure}[tbh]
+\begin{center}
+\includegraphics[width=0.75\textwidth]{./figures/prototype_S5_imagecarousel.png}
+\end{center}
+\caption{Crowd Science Event Reports Image Carousel Prototype as of Sprint 5\label{prototype_S5_imagecarousel}}
+\end{figure}
+
+\begin{figure}[tbh]
+\begin{center}
+\includegraphics[width=0.75\textwidth]{./figures/prototype_S5_report_1.png}
+\end{center}
+\caption{Crowd Science Event Reporting Prototype as of Sprint 5\label{prototype_S5_report_1}}
+\end{figure}
+
+\begin{figure}[tbh]
+\begin{center}
+\includegraphics[width=0.75\textwidth]{./figures/prototype_S5_report_2.png}
+\end{center}
+\caption{Crowd Science Event Reporting Prototype as of Sprint 5\label{prototype_S5_report_2}}
+\end{figure}
+
+\begin{figure}[tbh]
+\begin{center}
+\includegraphics[width=0.75\textwidth]{./figures/prototype_S5_report.png}
+\end{center}
+\caption{Crowd Science Event Reporting Prototype as of Sprint 5\label{prototype_S5_report}}
+\end{figure}
+
+\begin{figure}[tbh]
+\begin{center}
+\includegraphics[width=0.75\textwidth]{./figures/prototype_S5_view.png}
+\end{center}
+\caption{Crowd Science Single Event Viewing Prototype as of Sprint 5\label{prototype_S5_view}}
+\end{figure}
+
 \subsection{Backlog}
+Backlog completed this sprint was primarily in the form of prototype features added: implementation of event reports table, event reports map, and event set photo carousel on the main page; implementation of reporting interface specific to each event set; and interface to view an individual event. In addition, photos associated with events were also added to the database.
 \subsection{Success/Fail}
+The sprint was an overall sucess.  The prototype is essentially finished, no major changes should be needed. Documentation fell behind this sprint.
 
