--- a/Documents/NewDesignDoc/preparation.tex
+++ b/Documents/NewDesignDoc/preparation.tex
@@ -2,7 +2,7 @@
 
 
 
-Current Version [2.4.1]
+Current Version [2.6.0]
 \vspace*{5mm}
 
 {\color{SDColor5}
@@ -37,6 +37,14 @@ Current Version [2.4.1]
  \textit{\textbf{1/31/16}} & \textit{Hannah Aker} & \textit{2.4.0} & \textit{Finished revisions to mission/elevator, requirements, overview, and project overview sections. Added new section project revisions.}\tabularnewline
 \hline
  \textit{\textbf{2/11/16}} & \textit{Hannah Aker} & \textit{2.4.1} & \textit{Brought prototype section up to date with project, added sprint 4 report.}\tabularnewline
+\hline
+ \textit{\textbf{3/11/16}} & \textit{Hannah Aker} & \textit{2.5.0} & \textit{Brought prototype section up to date with project, added sprint 5 report.}\tabularnewline
+\hline
+ \textit{\textbf{3/16/16}} & \textit{Hannah Aker} & \textit{2.5.1} & \textit{Started Doxygen commenting for reference manual section.}\tabularnewline
+\hline
+ \textit{\textbf{3/20/16}} & \textit{Hannah Aker} & \textit{2.6.0} & \textit{Created Architecture and System design diagram, and edited associated sections.}\tabularnewline
+\hline
+ \textit{\textbf{3/20/16}} & \textit{Hannah Aker} & \textit{2.6.1} & \textit{Created GUI design and database design diagrams, and edited associated sections. Started tracibility matrix.}\tabularnewline
 \hline
 \end{tabular}
 \vfill
