--- a/Documents/NewDesignDoc/requirements.tex
+++ b/Documents/NewDesignDoc/requirements.tex
@@ -17,7 +17,7 @@ As a user, I want to be able to register and login and submit an event report.
 As a user, I want to be able to select which set of events I would like to view.
 
 \section{Requirements and Design Constraints}
-This project will be a HTML based webpage using Java Script to connect to a Mongo database, and hosted on an Apache server.
+This project will be a HTML based webpage using JavaScript JQueries to connect to post to PHP files which will query a Mongo database, and hosted on an Apache server.
 
 \subsection{System  Requirements}
 Webpage should be able to run on all operating systems and all internet browsers. This project is not required to have mobile functionality. 
@@ -31,7 +31,7 @@ The product backlog is directly derived from the user stories, but much more ref
 \subsection{Navigation Bar}
 \begin{itemize}
 \item Each page shall contain a navigation bar at the top of the page.
-\item The navigation bar will have buttons for logging in, new user registration, administration, and event reporting.
+\item The navigation bar will have buttons for logging in, new user registration, logout, and event reporting, where appropiate.
 \item The navigation bar shall contain a drop down box for selecting the event set.
 \item The selected event set shall maintain its state when navigating to a different page or refreshing the page.
 \end{itemize}
