--- a/Documents/NewDesignDoc/DesignDocument.tex
+++ b/Documents/NewDesignDoc/DesignDocument.tex
@@ -51,7 +51,7 @@
 \input{prototypes.tex}  %% All tracks
 %%\input{deploy.tex}  %% Normally not research track
 %%\input{userdocs.tex} %% All tracks
-%%\input{refman.tex}  %% All tracks
+\input{refman.tex}  %% All tracks
 %%\input{businessplan.tex}   %% Entrepreneur track only 
 %%\input{log.tex}   %% Research track  only
 %%\input{results.tex}  %% Research track  only
